error.log
> feedeliza-plus@1.0.0 start
> node backend/server.js
DEBUG: Value of auth before /me route: [AsyncFunction: authMiddleware]
/app/backend/src/domains/qrcode/qrcode.service.js:198
            [db.sequelize.fn('AVG', db.sequelize.col('rating')), 'average']
                                                               ^
SyntaxError: Unexpected token ','
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at module.exports (/app/backend/src/domains/qrcode/qrcode.controller.js:6:27)
    at module.exports (/app/backend/src/domains/qrcode/qrcode.routes.js:7:60)
    at module.exports (/app/backend/routes/index.js:53:36)
Node.js v20.19.5